--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -8,12 +8,13 @@
 
   <ItemGroup>
     <Folder Include="Enums\" />
-    <Folder Include="Models\" />
     <Folder Include="Config\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.11" />
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="7.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
 </Project>
